# backendTemplate

./: Fastapi.md  README.md  alembic.ini  pyproject.toml  run.py  test.py  testJwt.py  项目说明.md
alembic/: env.py
alembic/versions/: 1e4fe47b6727_add.py  21f023d103c4_description_of_the_migration.py  481c9b83cb2d_initial_migration.py  59e85718d3a7_newusers.py  66da84685331_add.py  6c2858babb71_firts.py  934194cc93e7_add.py  b79f6e10831b_ad.py  b8f0fa978870_initial_migration.py  e0af3380ce65_added_delivry.py  e423e81a0584_add.py  e758d528611d_add.py  f64152385003_add.py  fa4cfedb0aad_add.py  fc3edb00f9e4_.py  fcc4c39d28e9_first.py
app/: __init__.py  pyproject.toml  utils.py
app/api/: db.py  deps.py  main.py
app/api/router/: Ahs_fees.py  auth.py  baseRate.py  deliveryFees.py  delivery_fees.py  fedexDeliveryFees.py  fedex_deliveryFees.py  fedx_deliveryFees.py  login.py  skus.py  users.py
app/controller/: baseRateControllers.py  deliveryControllers.py  fedexControllers.py  multi_calculate_controllers.py  singgle_sku.py  sku_controllers.py  userControllers.py  user_controllers.py
app/core/: config.py  crud.py  multiCrud.py  security.py  smtpEmail.py
app/factorys/: fedexFactory.py
app/models/: Enums.py  __init__.py  deliverys.py  sku.py  user.py
app/schemas/: delivery_schema.py  sku_schema.py  token_schema.py  user_schema.py  vertifyCode.py
app/schemas/fedex/: accurate.py  ahs_schema.py  base_rate_schema.py  das_schema.py  delivery_schema.py  demand_schema.py  fedex_accurated_schema.py  oversize_schema.py  rdc_schema.py
